--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,13 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+#tsparticles {
+  height: 100vh;
+  width: 100%;
+  z-index: 0;
+  position: absolute;
+}
+
 @font-face {
   font-family: "Italic Bricks";
   src: url("//db.onlinewebfonts.com/t/ab16de1889ae2b44535f6bd55477bff4.eot");
