--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,3 +46,59 @@ a {
     background: black;
   }
 }
+
+.scroll-downs {
+  width: 34px;
+  height: 55px;
+}
+.mousey-white {
+  width: 3px;
+  padding: 10px 15px;
+  height: 32px;
+  border: 2px solid #fff;
+  border-radius: 25px;
+  opacity: 0.75;
+  box-sizing: content-box;
+}
+.scroller-white {
+  width: 3px;
+  height: 13px;
+  border-radius: 25%;
+  background-color: #fff;
+  animation-name: scroll;
+  animation-duration: 2s;
+  animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+  animation-iteration-count: infinite;
+}
+.mousey-black {
+  width: 3px;
+  padding: 10px 15px;
+  height: 32px;
+  border: 2px solid #000;
+  border-radius: 25px;
+  opacity: 0.75;
+  box-sizing: content-box;
+}
+.scroller-black {
+  width: 3px;
+  height: 13px;
+  border-radius: 25%;
+  background-color: #000;
+  animation-name: scroll;
+  animation-duration: 2s;
+  animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+  animation-iteration-count: infinite;
+}
+@keyframes scroll {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(15px);
+    opacity: 0;
+  }
+}
