--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,18 +1,3 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-#tsparticles {
-  height: 100vh;
-  width: 100%;
-  z-index: 0;
-  position: absolute;
-}
-
 @font-face {
   font-family: "Italic Bricks";
   src: url("//db.onlinewebfonts.com/t/ab16de1889ae2b44535f6bd55477bff4.eot");
@@ -28,13 +13,20 @@ body {
       format("svg");
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+::-moz-selection {
+  color: white;
+  background: black;
+}
+
+::selection {
+  color: white;
+  background: black;
 }
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -101,4 +93,34 @@ a {
     transform: translateY(15px);
     opacity: 0;
   }
+}
+
+.container-dark {
+  /* scroll-snap-type: y mandatory; */
+  /* overflow-y: scroll; */
+  height: 100vh;
+  background: #111111;
+  cursor: url(/white-circle.svg), auto;
+}
+
+.container-white {
+  /* scroll-snap-type: y mandatory; */
+  /* overflow-y: scroll; */
+  height: 100vh;
+  background: #edf2f7;
+  cursor: url(/black-circle.svg), auto;
+}
+
+section {
+  background-size: cover;
+  /* height: 100%; */
+  scroll-snap-align: start;
+  opacity: 0.85;
+}
+
+#tsparticles {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: -1;
 }
