--- a/src/styles/animated-components.css
+++ b/src/styles/animated-components.css
@@ -11,6 +11,7 @@
   -webkit-appearance: button;
   background-color: rgba(255, 255, 255, 0.06);
   color: #fff;
+  border: 1px solid grey;
   cursor: pointer;
   font-family: "Montserrat";
   font-size: 17px;
@@ -88,6 +89,7 @@
   background-color: #fff;
   color: #fff;
   cursor: pointer;
+  border: 1px solid grey;
   font-family: "Montserrat";
   font-size: 17px;
   font-weight: 500;
@@ -148,4 +150,38 @@
 }
 .btn-white:hover:after {
   --progress: -100%;
+}
+
+.project-card-white {
+  display: flex;
+  flex-direction: column;
+  background-color: #E6E6E6;
+  border-radius: 8px;
+  border: 1px solid grey;
+  transition: height 0.5s;
+  -webkit-transition: height 0.5s;
+  position: relative;
+  transition: all 300ms ease;
+}
+.project-card-white:hover {
+  transform: scale(1.03);
+  box-shadow: 0px 0px 30px -15px rgba(0, 0, 0, 0.5);
+  background-color: #f3f3f3;
+}
+
+.project-card-dark {
+  display: flex;
+  flex-direction: column;
+  background-color: #191919;
+  border-radius: 8px;
+  border: 1px solid grey;
+  transition: height 0.5s;
+  -webkit-transition: height 0.5s;
+  position: relative;
+  transition: all 300ms ease;
+}
+.project-card-dark:hover {
+  transform: scale(1.03);
+  box-shadow: 0px 0px 30px -15px rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.06);
 }
