--- a/src/styles/animated-components.css
+++ b/src/styles/animated-components.css
@@ -155,7 +155,7 @@
 .project-card-white {
   display: flex;
   flex-direction: column;
-  background-color: #E6E6E6;
+  background-color: #e6e6e6;
   border-radius: 8px;
   border: 1px solid grey;
   transition: height 0.5s;
@@ -185,3 +185,61 @@
   box-shadow: 0px 0px 30px -15px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.06);
 }
+
+.nav-link {
+  cursor: pointer;
+  margin-right: 20px;
+  margin-top: 5px;
+  border-bottom: 3px solid transparent;
+}
+
+
+.nav-link--active::after {
+  transition: all ease-in-out 0.2s;
+  width: 100%;
+}
+.nav-link--active:hover::after {
+  width: 100%;
+}
+
+#nav-link-dark:hover::after {
+  visibility: visible;
+  width: 60%;
+}
+#nav-link-dark::after {
+  transition: all ease-in-out 0.2s;
+  background: none repeat scroll 0 0;
+  content: "";
+  display: block;
+  margin-top: 2px;
+  height: 3px;
+  width: 0;
+  background-color: white;
+}
+
+#nav-link-dark:hover {
+  font-weight: 600;
+
+}
+
+#nav-link-white::after {
+  transition: all ease-in-out 0.2s;
+  background: none repeat scroll 0 0;
+  content: "";
+  display: block;
+  margin-top: 2px;
+  height: 3px;
+  width: 0;
+  background-color: rgb(0, 0, 0);
+}
+
+#nav-link-white:hover {
+  font-weight: 600;
+}
+
+#nav-link-white:hover::after {
+  visibility: visible;
+  width: 60%;
+}
+
+
